Update dependencies and modify training script for GSM8K integration; enhance LLM generation with batch data handling and answer validation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,12 @@ dependencies = [
     "hydra-core",
     "numpy",
     "pybind11",
-    "ray",
+    "ray==2.46.0",
     "tensordict",
     "transformers<4.48",
-    "vllm<=0.6.3",
+    "vllm==0.5.4",
+    "aiohttp==3.8.6",
+    "wandb",
 ]
 
 # Optional dependencies (extras_require in setup.py)
